# range

./: LICENSE  README.md  pyproject.toml  setup.py
.circleci/: Dockerfile  README.md  config.yml
.github/: CODEOWNERS
.github/workflows/: lint.yaml
rangemp/: utils.py
rangemp/datasets/: __init__.py  aqm.py  dimers.py  efa.py  materialscloud.py  md22.py  qm7x.py  water.py
rangemp/nn/: __init__.py  blocks.py  regularization.py  scatter.py  system.py  test_scatter.py  utils.py
rangemp/nn/models/: __init__.py  base.py  mace.py  painn.py  schnet.py  so3krates.py
src/rangemp/datasets/: __init__.py  aqm.py  materialscloud.py  qm7x.py  water.py
src/rangemp/nn/: __init__.py  blocks.py  regularization.py  scatter.py  system.py  utils.py
src/rangemp/nn/models/: __init__.py  base.py  mace.py  painn.py  schnet.py  so3krates.py
tests/nn/: test_scatter.py  test_utils.py
